# submitter

./: .gitignore  AGENTS.md  BEST_PRACTICES.md  Cargo.toml  Dockerfile  LICENSE  README.md  submitter.yaml
.github/workflows/: auto-assign.yml  ci.yml  coverage.yml  docker-publish.yml  proof-html.yml  security.yml
docs/: API.md  ARCHITECTURE.md  INTEGRATION.md
src/: config.rs  contracts.rs  lib.rs  main.rs  script.rs  startup.rs  submitter.rs  test_utils.rs
src/application/: mod.rs  orchestrator.rs  ports.rs
src/domain/: batch.rs  errors.rs
src/infrastructure/: da_blob.rs  da_calldata.rs  ethereum_adapter.rs  mod.rs  observability.rs  prover_http.rs  prover_mock.rs  storage_postgres.rs  storage_sqlite.rs
tests/: cli.rs  integration_test.rs  lifecycle.rs  startup.rs
