[package]
name = "submitter-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

ethers = { version = "2", features = ["abigen", "rustls"] }

# New dependencies
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "macros", "uuid", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
metrics = "0.22"
metrics-exporter-prometheus = "0.18"
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }
thiserror = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
backoff = { version = "0.4", features = ["tokio"] }
tokio-util = "0.7"
sha1_smol = "1.0"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
